--- a/src/components/highligts/Highlights.scss
+++ b/src/components/highligts/Highlights.scss
@@ -1,19 +1,29 @@
 @import "../../assets/styles/common.scss";
 
-#highlights-section {
+#menu-section {
   background-color: "white";
   padding: 0 30px;
   margin-top: 100px;
   max-width: 100%;
-  .article1 {
+  .menu-header {
     width: 100%;
     padding: 20px 25%;
     display: flex;
     align-items: center;
     flex-direction: row;
+    @media (max-width: 720px) {
+      flex-direction: column;
+      padding: 10px;
+    }
+
     h1 {
       color: $text-color;
       width: 50%;
+      @media (max-width: 720px) {
+        flex-direction: column;
+        width: 100%;
+        text-align: center;
+      }
     }
     div {
       button {
@@ -26,13 +36,19 @@
       }
     }
   }
-  .article2 {
-    img {
-      width: 450px;
-      height: 500px;
-      border-radius: $border-radius;
-      position: relative;
-      top: 50px;
+  .menu {
+    display: grid;
+    margin-top: 50px;
+    padding: 10px 250px;
+    gap: 30px;
+    @media (max-width: 720px) {
+      width: 100%;
+      max-width: 100%;
+      min-width: 100%;
+      padding: 10px 10px;
+      grid-template-columns: 1fr;
+      gap: 30px;
     }
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   }
 }
