--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -8,6 +8,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  color: $text-color;
 }
 main {
   max-width: 100%;
@@ -27,8 +28,19 @@ h2 {
   @media (max-width: 720px) {
     font-size: 24pt;
   }
-
 }
+
+h4 {
+  font-size: 24pt;
+  font-weight: normal;
+  margin: 0;
+}
+
+h5 {
+    font-size: 20pt;
+    font-weight: normal;
+    margin: 0;
+  }
 
 p {
   font-size: 18pt;
