--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -50,9 +50,9 @@
       @media (max-width: 720px) {
         width: 95%;
         height: 300px;
+        object-fit: cover;
         padding: 5px;
         border-radius: $border-radius;
-        height: auto;
         top: auto;
       }
     }
