--- a/src/components/rating/Rating.scss
+++ b/src/components/rating/Rating.scss
@@ -28,6 +28,7 @@
       max-width: 100%;
       max-height: max-content;
     }
+    object-fit: cover;
     border-top-left-radius: $border-radius;
     border-top-right-radius: $border-radius;
     max-width: 400px;
