--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -6,41 +6,56 @@
   gap: 100px;
   grid-template-columns: 7fr 5fr;
   padding: 0 30px;
-  margin: 50px 0;
+  margin: 50px 0 200px 0;
   max-width: 100%;
   @media (max-width: 720px) {
     width: 100%;
     max-width: 100%;
     min-width: 100%;
     padding: 10px 10px;
+    margin: 50px 0;
     grid-template-columns: 1fr;
     gap: 20px;
   }
   .article1 {
     padding: 20px;
-    margin-left: 40%;
+    margin-left: 30%;
     @media (max-width: 1000px) {
       margin: 10px;
     }
   }
   .article2 {
+    position: relative;
     @media (max-width: 720px) {
       margin: 0;
       align-items: center;
     }
-    img {
-      width: 450px;
-      height: 500px;
+    .img1 {
+      width: 350px;
+      height: 400px;
       border-radius: $border-radius;
-      position: relative;
+      position: absolute;
       object-fit: cover;
-      top: 50px;
+      top: 100px;
       @media (max-width: 720px) {
         width: 95%;
         height: 300px;
         padding: 5px;
+        position: relative;
         border-radius: $border-radius;
         top: auto;
+      }
+    }
+    .img2 {
+      width: 350px;
+      height: 400px;
+      border-radius: $border-radius;
+      position: absolute;
+      object-fit: cover;
+      top: 50px;
+      left: 250px;
+      @media (max-width: 720px) {
+        display: none;
       }
     }
   }
