--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,6 +1,6 @@
 @import "../../assets/styles/common.scss";
 
-header {
+#header-nav {
   padding: 30px;
   height: 50px;
   width: 100%;
@@ -11,9 +11,19 @@ header {
   max-width: 100%;
   z-index: 999;
   background-color: white;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
   top: 0;
+  @media (max-width: 800px) {
+    display: none;
+  }
   .logo {
     margin-left: 40%;
+    @media (max-width: 1000px) {
+      width: 30%;
+      margin: 0;
+    }
   }
   nav {
     ul {
@@ -25,6 +35,10 @@ header {
         display: inline;
         text-decoration: none;
         font-size: 18pt;
+        @media (max-width: 1000px) {
+          padding: 5px;
+          font-size: 14pt;
+        }
         color: $text-color;
       }
     }
