--- a/src/components/header/MobileNav.scss
+++ b/src/components/header/MobileNav.scss
@@ -1,139 +1,71 @@
 @import "../../assets/styles/common.scss";
-.mobile-nav {
-  position: fixed;
+
+#mobile-nav {
+  padding: 30px;
+  height: 50px;
+  width: 100%;
+  max-width: 100%;
+  position: sticky;
+  display: grid;
+  grid-template-columns: 6fr 6fr;
+  max-width: 100%;
+  z-index: 999;
+  background-color: white;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
   top: 0;
-  left: 0;
-  bottom: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: 10;
-  &.is-hidden {
-    height: 0;
-    overflow: hidden;
+  @media (min-width: 800px) {
+    display: none;
   }
-
-  &__overlay {
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background-color: #000;
-    opacity: 0;
-    transition: all 250ms linear;
-    cursor: pointer;
-
-    &.is-visible {
-      opacity: 0.4;
+  .logo {
+    margin: 0;
+  }
+  .burger-container {
+    margin-right: 50px;
+    .burger {
+      float: right;
+      cursor: pointer;
+      background: transparent;
+      border: none;
+      font-size: 20px;
     }
   }
 
-  &__drawer {
+  nav {
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    width: 80vw;
     height: 100vh;
-    z-index: 2;
-    transform: translateX(-80vw);
-    transition: all 250ms ease;
-    background-color: $primary-color-dark;
-    color: $light-color;
-    display: flex;
-    position: fixed;
-    flex-direction: column;
-    hr,
-    a {
-      color: $light-color;
+    background-color: white;
+    left: -80vw;
+    width: 50%;
+    padding: 20px;
+    img {
+      margin-top: 20px;
+      width: 50%;
     }
-    .mobile-nav-logo {
-      margin: 10px;
-      .mobile-nav-logo-img {
-        height: 80px;
-      }
-      .mobile-nav-contact {
-        float: right;
-        margin-top: 30px;
-        a {
-          padding: 10px;
-          text-decoration: none;
-          color: $light-gray-color;
-          &:hover {
-            color: $primary-color-light;
-          }
+    top: 0;
+    &.hidden {
+      transform: translateX(-80vw);
+      transition: all 500ms ease;
+    }
+    &.show {
+      transform: translateX(80vw);
+      transition: all 500ms ease;
+    }
+    ul {
+      list-style-type: none;
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+      a {
+        text-decoration: none;
+        font-size: 24pt;
+        color: $text-color;
+        &:hover,
+        &:active {
+          color: $yellow-color;
         }
       }
     }
-    .mobile-nav-body {
-      overflow-y: auto;
-      flex: 1;
-      ul {
-        padding: 0;
-        margin: 0;
-        list-style: none;
-        li {
-          padding: 10px;
-          &:hover,
-          &:focus {
-            background-color: $primary-color-light;
-            transition: all 400ms ease !important;
-            a.active {
-              color: $light-color;
-            }
-          }
-          a {
-            display: block;
-            padding-left: 20px;
-            outline: none;
-            text-decoration: none;
-            font-size: 1.2em;
-            &.active {
-              color: $primary-color-light;
-            }
-          }
-        }
-      }
-    }
-    .mobile-nav-footer {
-      width: 100%;
-      bottom: 5px;
-      .mobile-nav-footer-content {
-        font-size: 0.9em;
-        padding: 10px 15px;
-        a {
-          text-decoration: none;
-          color: $light-gray-color;
-          &:hover {
-            color: $primary-color-light;
-          }
-        }
-        .social {
-          float: right;
-          i {
-            padding: 20px 10px;
-            font-size: 1.3em;
-          }
-        }
-        &-bottom {
-          margin-top: 50px;
-          @media (max-height: 280px) {
-            margin-top: 10px;
-          }
-        }
-      }
-    }
-    &.is-visible {
-      transform: translateX(0);
-    }
-  }
-}
-
-.push-by-menu {
-  transition: all 400ms ease !important;
-  transform: translateX(0);
-  &.is-pushed {
-    transform: translateX(200px);
   }
 }
