add smooth scroll

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -20,8 +20,8 @@
   }
   .logo {
     margin-left: 40%;
+    width: 190px;
     @media (max-width: 1000px) {
-      width: 30%;
       margin: 0;
     }
   }
