--- a/src/components/header/MobileNav.scss
+++ b/src/components/header/MobileNav.scss
@@ -20,6 +20,7 @@
   }
   .logo {
     margin: 0;
+    width: 190px;
   }
   .burger-container {
     margin-right: 50px;
@@ -41,7 +42,7 @@
     padding: 20px;
     img {
       margin-top: 20px;
-      width: 50%;
+      width: 190px;
     }
     top: 0;
     &.hidden {
